Fix loginpage on small screens, resolves #1169, part 2

--- a/scss/boost_union/post.scss
+++ b/scss/boost_union/post.scss
@@ -388,8 +388,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        margin-left: 20px;
-        margin-right: 20px;
         /* Prevent wrapper from extending beyond viewport when tabs are wide. */
         max-width: 100%;
     }
@@ -425,7 +423,6 @@
     /* Container in the middle; allow shrink so it stays inside wrapper on narrow widths. */
     .login-wrapper:has(.loginform #login-layout-tabs) .login-container {
         flex: 0 0 auto;
-        min-width: 0;
         order: 0;
     }
 }
@@ -435,7 +432,6 @@
 
     .login-wrapper:has(.loginform #login-layout-tabs) .login-container {
         max-width: 100vw;
-        overflow-x: hidden;
     }
 }
 
